--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Modal Simple</title>
 </head>
 <body>
-    <button>launch Alaret </button>
+    <button onclick="ashowAlart()">launch Alaret </button>
+
+
+    <script src="promt.js"></script>
 </body>
 </html>
