--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <button onclick="ashowAlart()">launch Alaret </button>
+    <button onclick="confirmBtn()">confirm</button>
+    <button onclick="promtBtn()">promtBtn</button>
 
 
     <script src="promt.js"></script>
