add,remove,clear

--- a/storage.html
+++ b/storage.html
@@ -11,7 +11,11 @@
     <section>
         <input id="name_filed" type="text">
         <button id="btn_add_name">add to LS</button>
-        <button id="btn_remove _name"></button>
+        <button id="btn_remove _name">remove to ls</button>
+        <br>
+        <button id="clear_all">clear </button>
     </section>
+
+    <script src="js/storage.js"></script>
 </body>
 </html>
